# potential

./: .gitignore  Cargo.toml  README.md  justfile  poml.syntax  rust-toolchain
.cargo/: config
build-web/: Cargo.toml
build-web/src/: main.rs
crates/archie/: Cargo.toml  build.rs
crates/archie/src/: context.rs  event.rs  lib.rs  timer.rs
crates/archie/src/helper/: native.rs  web.rs
crates/archie/src/platform/: mod.rs  web.rs
crates/archie_egui/: Cargo.toml
crates/archie_egui/src/: egui.wgsl  lib.rs  renderer.rs
crates/common/: Cargo.toml
crates/common/src/: axis.rs  lib.rs
crates/nodes/: Cargo.toml
crates/nodes/src/: lib.rs  link.rs  node.rs  pin.rs  style.rs
crates/particle/: Cargo.toml
crates/particle/src/: lib.rs
crates/poml/: Cargo.toml  syntax
crates/poml/src/: lib.rs
crates/poml/src/parser/: event.rs  grammar.rs  mod.rs
crates/poml/src/parser/ast/: builder.rs  mod.rs  validation.rs
crates/potential/: Cargo.toml
crates/potential/src/: app.rs  axis.rs  main.rs  nodes.rs  particle.rs  renderer.rs  scientific.rs
crates/potential/src/app/: appearance.rs
crates/potential/src/shaders/: compute.spv
docs/: gl.js  index.html  potential.js  potential.wasm  potential_bg.wasm
pkg/: index.html  potential.js  potential_bg.wasm
potential/: Cargo.toml
potential/src/: lib.rs  main.rs
potential/src/app/: appearance.rs
potential/src/graph/: figure.rs  mod.rs  plot.rs
shaders/: .gitignore
shaders/builder/: Cargo.toml
shaders/builder/src/: main.rs
shaders/compute/: Cargo.toml
shaders/compute/src/: lib.rs
src/: app.rs  axis.rs  context.rs  event.rs  lib.rs  main.rs  poml.rs  scientific.rs  sdf.rs  shapes.rs  store.rs
src/app/: gui.rs
src/app/shader/: frag.glsl  mod.rs  vertex.glsl
src/helper/: mod.rs  web.rs
src/poml/: event.rs  lexer.rs  parser.rs  registry.rs  text.rs
src/poml/parser/: grammar.rs  mod.rs
src/poml/parser/ast/: builder.rs  mod.rs  validation.rs
