[package]
name = "potential"
version = "0.1.0"
authors = ["Joe Loach <joe.gloach@gmail.com>"]
resolver = "2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web = ["wgpu/webgl", "winit/web-sys"]

[dependencies]
# windowing
winit = "0.25"
# rendering
wgpu = "0.11"
# gui
egui = "0.15"
epi = "0.15"
egui_winit_platform = "0.11.0"
egui_wgpu_backend = "0.14"
# math
ultraviolet = "0.8.1"
# time handling
instant = { version = "0.1", features = [ "stdweb" ] }

# web deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

# native deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"
