[package]
name = "potential"
version = "0.1.0"
authors = ["Joe Loach <joe.gloach@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web = ["archie/web"]

[dependencies]
archie = { git = "https://github.com/joe-loach/archie" }
# gui
archie-egui = { git = "https://github.com/joe-loach/archie" }
# math
glam = { version = "0.20" }
# loggging
log = "0.4.14"
# error handling
anyhow = "1.0.51"
thiserror = "1.0.30"
# byte conversion
bytemuck = "1.7.3"
