[package]
name = "archie"
version = "0.0.1"
authors = ["Joe Loach <joe.gloach@gmail.com>"]
edition = "2021"

[lib]

[features]
web = ["wgpu/webgl", "web-sys/Location"]

[dependencies]
# windowing
winit = "0.26"
# rendering
wgpu = "0.11"
# gui
egui = "0.15"
egui_winit_platform = { version = "0.12.0", features = [ "clipboard" ]}
egui_wgpu_backend = "0.14"
# time handling
instant = { version = "0.1", features = [ "stdweb" ] }
# error handling
anyhow = "1.0.51"
thiserror = "1.0.30"
# logging
log = "0.4.14"

# web deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1.7"
# logging
console_log = { version = "0.2", features = ["color"] }

# native deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"
# logging
simplelog = "0.11"

