[package]
name = "archie"
version = "0.0.1"
authors = ["Joe Loach <joe.gloach@gmail.com>"]
edition = "2021"

[lib]

[features]
web = ["wgpu/webgl", "web-sys/Location"]

[dependencies]
cfg-if = "1"
# windowing
winit = "0.26"
# rendering
wgpu = { version = "0.12", features = [ "spirv"] }
# time handling
instant = { version = "0.1", features = [ "stdweb" ] }
# error handling
anyhow = "1.0.51"
thiserror = "1.0.30"
# logging
log = "0.4.14"

# web deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
# logging
wasm-logger = "0.2.0"

# native deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"
# logging
env_logger = "0.9"
