[package]
name = "archie-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archie = { path = "../archie" }
egui = { version = "0.17" }
egui-winit = { version = "0.17.0", features = ["convert_bytemuck"] }
bytemuck = "1.7.3"