[package]
name = "potential"
version = "0.1.0"
authors = ["Joe Loach <joe.gloach@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web = ["archie/web"]

[dependencies]
log = "0.4.14"
archie = { path = "../archie" }
poml = { path = "../poml" }
ultraviolet = "0.8.1"